support for building mac app